--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,7 @@
             max-height: 230px; /* Thiết lập chiều cao tối đa là 220px */
           }
         header {
-            background-image: url('https://img.pikbest.com/wp/202343/aerial-views-overhead-perspective-of-lush-woodland-a-captivating-view-dense-forest-ecosystem_9973281.jpg!bwr800');
+            background:url('../RES/anhnentrangchu.png');
             color: #fff;
             padding: 10px 0;
             text-align: center;
