--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,7 @@
             max-height: 230px; /* Thiết lập chiều cao tối đa là 220px */
           }
         header {
-            background:url('../RES/anhnentrangchu.png');
+            background:url('../RES/anhnentrangchu.ipg');
             color: #fff;
             padding: 10px 0;
             text-align: center;
