--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,7 +93,7 @@ body {
         footer {
             padding: 5px;
             margin-top: 5px;
-            color: #f1f1f1;
+            color: #000000;
             background-color: rgb(125 56 18);
             text-align: center;
         }
